# claude-crawler

./: .coverage  .current_context.md  .env.example  .gitignore  .gitmodules  .hot_context.md  .session-wrap-trigger.json  .zshrc-workspace  AGENT.md  ARCHITECTURE_REVIEW_FINDINGS.json  CHANGELOG.md  CI-CD-COMPLETION-REPORT.md  CI-CD-SETUP-NEXT-STEPS.md  CLAUDE.md  DASHBOARD_GUIDE.md  Dockerfile  GA4_SETUP.md  INTERACTIVE_TEST_GUIDE.md  P1_FINAL_REPORT.md  PRECISION_TEST_REPORT.md  README.md  README.zh.md  TEST_GUIDE_P1.md  VALIDATION_REPORT_UNIT0C.md  _graph.md  _index.md  api.py  app.py  dashboard-standalone.html  docker-compose.yml  fetch-ga4-data.py  ga4-channel-breakdown.csv  ga4-daily-channel-report.md  ga4-minimal-output.csv  ga4-server.js  package-lock.json  package.json  pyproject.toml  run_p1_full_test.py  run_p1_tests.py  (+4 more)
docs/: Link  (+22 more)
projects/production/yd-utility-kit/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
projects/production/yd-utility-kit/docs/: v0.5-roadmap.md
projects/production/yd-utility-kit/tests/: test_api.py  test_cli.py
projects/tools/claude crawler/: .gitignore  CHANGELOG.md  DEPLOYMENT_EXECUTION_REPORT.md  app.py  phase2_deployment_report.json  pyproject.toml
projects/tools/claude crawler/crawler/: __init__.py  analysis.py  cache.py  config.py  export.py  models.py  parser.py  parser_extractors.py  parser_legacy.py  parser_main.py  parser_page_type_detection.py  parser_structured_data.py  raw_data.py  storage.py
projects/tools/claude crawler/docs/: DETECTION_IMPROVED.md  PARSER_MODULARIZATION.md  PHASE2_DEPLOYMENT_CHECKLIST.md  (+1 more)
(+1027 files in other folders)
