[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yd-utility-kit"
version = "0.5.1"
description = "工作空間通用工具集"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/redredchen01/yd-2026-workspace"
Repository = "https://github.com/redredchen01/yd-2026-workspace"
Issues = "https://github.com/redredchen01/yd-2026-workspace/issues"

[project.optional-dependencies]
media = ["opencv-python>=4.8", "Pillow>=10.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
ydk = "ydk.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ydk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
